# solana-escrow

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: config.rs  main.rs
client/: Cargo.toml
client/src/: client.rs  lib.rs
client/tests/: program_test.rs
client/tests/accounts/: escrow.rs  mod.rs  token.rs
client/tests/token/: mod.rs
client/tests/validator/: mod.rs
program/: Cargo.toml
program/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
