[package]
name = "escrow-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.8", features = ["derive"] }
escrow-client = { path = "../client" }
escrow-program = { path = "../program", features = ["no-entrypoint"] }
serde = '1.0.188'
serde_json = "1.0.107"
serde_yaml = "0.9.25"
solana-cli-config = "1.18.17"
solana-client = "1.18.17"
solana-sdk = "1.18.17"
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
