[package]
name = "escrow-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
escrow-client = { path = "../client" }
escrow-program = { path = "../program", features = ["no-entrypoint"] }
serde = '1.0.218'
serde_json = "1.0.139"
serde_yaml = "0.9.33"
solana-cli-config = "2.2.0"
solana-client = "2.2.0"
solana-sdk = "2.2.1"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
