[package]
name = "escrow-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
borsh = "1.2.1"
escrow-program = { path = "../program", features = ["no-entrypoint"] }
solana-client = "1.18.17"
solana-rpc-client-api = "1.18.17"
solana-sdk = "1.18.17"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = "3.0.2"
thiserror = "1.0.61"

[dev-dependencies]
