[package]
name = "escrow-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
borsh = "1.5.5"
escrow-program = { path = "../program", features = ["no-entrypoint"] }
solana-client = "2.2.0"
solana-rpc-client-api = "2.2.0"
solana-sdk = "2.2.1"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = "6.0.0"
thiserror = "2.0.11"

[dev-dependencies]
