[package]
name = "escrow-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
borsh = "1.5.5"
solana-program = "2.2.1"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
#anyhow = "1.0.86"
#solana-program-test = "1.18.15"
#solana-test-validator = "1.18.15"
#solana-client = "1.18.15"
#solana-rpc = "1.18.15"