[package]
name = "escrow-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
custom-heap = []
custom-panic = []

[dependencies]
borsh = "1.5.5"
solana-program = "2.2.1"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }

[dev-dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }